2005-03-07 Magnus Hagdorn
 * bumped version to 0.1
 * CF_profile.py: disabled caching for now (we run out of memory for large files)
 * plotCFstats.py: close file after we've used it
 * plotProfileTS.py: add simpe profiles at beginning and end of period
 * plotStreams.py: centre period on time slice
 * sort out distribution of files in progs and data

2005-03-04 Magnus Hagdorn
 * plotCFvar.py: fixed bug with checking profile options
 * glide_launch.py moved to glimmer

2005-02-15 Magnus Hagdorn
 * CF_options.py: fix bug where interval is not set for profiles
 * plotCFvars.sh: fixed bug with checking profile options
 * plotStreams.py: new prog for plotting funky stream locations

2005-02-11 Magnus Hagdorn
 * CF_file.py: add method to get number of time slices
 * CF_profile.py: add profile time series
 * extractCFstats.py: add switch for EISMINT runs
 * extractTS.py: new prog for extracting a timeseries
 * plotCFvar.py: add option to plot location of a profile
 * plotProfileTS.py: new prog for plotting time-dist diagrams

2005-02-03 Magnus Hagdorn
 * CF_area.py: fixed a bug
 * CF_createfile.py: removed spot, now can load var definitions from multiple files
 * CF_options.py: fixed a minor problem

2004-12-13 Magnus Hagdorn
 * CF_profilearea.py: select different pens, plot more than one profile
 *  plotProfile.py, plotSpot.py: plot more than one file

2004-12-02 Magnus Hagdorn
 * extract3DProfile.py: new prog for extracting profile through
   3D field

2004-12-01 Magnus Hagdorn
 * CF_area.py: have fixed length vectors. Still not quite right...
 * plotCFstats.py: added option to plot central ice thicknesses
 * plotCFvar.py: we can now also plot multiple files
 * plotEISMINT2stats.py: added legend

2004-11-30 Magnus Hagdorn
 * CF_area.py: added vector velocity plots
 * CF_colourmap.py: colourmaps for vel and bvel
 * CF_loadfile.py: get magnitude of velocity fields
 * plotCFvar.py: also plot vectors

2004-11-29 Magnus Hagdorn